# neuraldigest-scraper

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
news_ml_scraper/: scraper.py
src/news_ml_scraper/: scraper.py
