[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news_ml_scraper"
version = "0.0.1"
authors = [
  { name="Liam Pieri", email="liamwazherealso@gmail.com" },
]
description = "Scraper for news ml project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/liamwazherealso/news-ml-scraper"
"Bug Tracker" = "https://github.com/liamwazherealso/news-ml-scraper/issues"